# Searching_Algorithm_Server

./: AStar.cpp  AStar.h  AStar.txt  BFS.cpp  BFS.h  BFS.txt  BestFS.cpp  BestFS.h  BestFS.txt  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Cell.cpp  Cell.h  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  DFS.txt  FileCacheManager.cpp  FileCacheManager.h  Filecashmanager.cpp  Filecashmanager.h  Matrix.cpp  Matrix.h  Matrix.txt  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.cpp  OA.h  PriorityQueueState.cpp  PriorityQueueState.h  README.md  Searchable.cpp  Searchable.h  (+24 more)
